# dogaas

./: README.md  build_exe.ps1  pyproject.toml
src/: cli_app.py  config.json  gui_app.py  tasks.json
src/dogaas/: downloader.py
src/i18n/cli/: ja.json
src/i18n/gui/: en.json  ja.json
tests/: test_downloader.py
