[tool.poetry]
name = "dogaas"
version = "0.1.0"
description = ""
authors = ["Eleven-junichi2"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flet = "^0.7.4"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.12.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
